# PyCompatibility

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  README-dev_objective.md  README.md  color.py  log.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py
.github/: dependabot.yml
.github/workflows/: codecov.yml  codeql.yml  coverage.yml  lint.yml  release.yml  test.yml  test_coverage.yml
client/: __init__.py  color.py  configuration.py  exception.py  log.py  main.py
client/tests/: configuration_test.py  test_exception.py  test_logging.py
src/PyCompatibility/: __init__.py
src/PyCompatibility/client/: configuration.py  log.py  main.py
src/PyCompatibility/client/tests/: test_logging.py
