# Project configuration
#
# Copyright (C) 2023-2024  Bo Wen Cao
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[project]
name = "PyCompatibility"

version = "0.0.0"

authors = [{"name" = "Bo Wen Cao"}]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
    "Typing :: Typed"
]
dependencies = ["click", "tomli", "tomli-w"]
description = "a static Python version compatibility checker"
keywords = ["python", "python3", "compatibility-testing", "static-checks"]
license = {"file" = "COPYING"}
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
Compat = "client.main:main"

[tool.mypy]
strict = true
implicit_optional = true
warn_no_return = true
warn_unreachable = true

show_column_numbers = true

[tool.black]
line-length = 80
